<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/content_description"
            android:src="@drawable/sports" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_logo"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/lblEmailAddress"
            style="@style/ShadowText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/label_email_address"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text" />

        <AutoCompleteTextView
            android:id="@+id/et_email"
            style="@style/SignInEditText"
            android:layout_below="@+id/lblEmailAddress"
            android:completionThreshold="1"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/et_password" />

        <TextView
            android:id="@+id/lblPassword"
            style="@style/ShadowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_email"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/label_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/et_password"
            style="@style/SignInEditText"
            android:layout_below="@+id/lblPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_signin"
            style="@style/ShadowText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background_states"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/label_sign_in"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_below="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn_facebook"
                android:layout_width="@dimen/login_sn_btn_width"
                android:layout_height="@dimen/login_sn_btn_height"
                android:background="@drawable/facebook_button"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                />
            <ImageButton
                android:id="@+id/btn_twitter"
                android:layout_width="@dimen/login_sn_btn_width"
                android:layout_height="@dimen/login_sn_btn_height"
                android:layout_toRightOf="@+id/btn_facebook"
                android:layout_marginTop="30dp"
                android:background="@drawable/twitter_buttton"
                android:layout_marginLeft="30dp"/>

            <ImageButton
                android:id="@+id/btn_gplus"
                android:layout_width="@dimen/login_sn_btn_width"
                android:layout_height="@dimen/login_sn_btn_height"
                android:background="@drawable/gplus_button"
                android:layout_toRightOf="@+id/btn_twitter"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                />

        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_forgotPassword"
        style="@style/ShadowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlLogin"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background_states"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/label_forgot_password"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_skip"
        style="@style/ShadowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background_states"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/label_skip_now"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>